tests/baselines/reference/isolatedModulesNoEmitOnError.errors.txt
tests/cases/compiler/file1.ts(1,14): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/file1.ts (1 errors) ====
    export const x: string = 3;
                 ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.